--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -23,7 +23,7 @@
         android:layout_margin="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bac"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/TERMINAR"
@@ -32,6 +32,7 @@
             android:background="@drawable/button_redondo_celeste"
             android:onClick="TerminarRecorrido"
             android:text="@string/iniciar_recorrido"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +74,7 @@
             android:background="@drawable/button1"
             android:onClick="NuevaFamilia"
             android:text="@string/cargar_familia"
+            android:textColor="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
