--- a/app/src/main/res/layout/alert_contacto.xml
+++ b/app/src/main/res/layout/alert_contacto.xml
@@ -55,7 +55,7 @@
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="@string/celular"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -69,7 +69,7 @@
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="@string/fijo"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="@string/telefono"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
