--- a/app/src/main/res/layout/alert_guardar_familia.xml
+++ b/app/src/main/res/layout/alert_guardar_familia.xml
@@ -92,6 +92,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NUMERO" />
 
+    <EditText
+        android:id="@+id/TELEFONOFAMILIAR"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/edit_text_1"
+        android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="@string/telefono_familiar"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NUMEROSEGUNCARTOGRAFIA" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -111,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NUMEROSEGUNCARTOGRAFIA">
+        app:layout_constraintTop_toBottomOf="@+id/TELEFONOFAMILIAR">
 
         <TextView
             android:id="@+id/textView10"
