--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -17,53 +17,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/bac"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/TERMINAR"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:background="@drawable/button_redondo_celeste"
-            android:onClick="TerminarRecorrido"
-            android:text="@string/iniciar_recorrido"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bac"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="75dp"
         android:background="@drawable/fondo3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
-
-        <ImageButton
-            android:id="@+id/MIUBICACION"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/button_redondo_celeste"
-            android:src="@drawable/mi_ubicacion"
-            app:layout_constraintBottom_toBottomOf="@+id/EMPEZAR2"
-            app:layout_constraintEnd_toStartOf="@+id/EMPEZAR2"
-            app:layout_constraintHorizontal_bias="0.156"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/EMPEZAR2"
-            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/EMPEZAR2"
@@ -93,19 +54,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="250dp"
+            android:layout_width="300dp"
             android:layout_height="40dp"
             android:background="@drawable/button_redondo_blanco"
-            app:layout_constraintBottom_toBottomOf="@+id/COMPARTIR"
-            app:layout_constraintEnd_toStartOf="@+id/COMPARTIR"
-            app:layout_constraintHorizontal_bias="0.114"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/COMPARTIR"
-            app:layout_constraintVertical_bias="0.6">
+            app:layout_constraintTop_toTopOf="parent">
 
             <Spinner
                 android:id="@+id/FECHAS"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -114,31 +73,57 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageButton
-            android:id="@+id/COMPARTIR"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-
-            android:layout_margin="10dp"
-            android:background="@drawable/button_redondo_azul"
-            android:onClick="MostrarArchivos"
-            android:src="@android:drawable/ic_menu_share"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button3"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/grupo_botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:onClick="probar"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout9" />
+        app:fab_labelStyle="@style/etiqueta"
+        app:fab_labelsPosition="right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/compartir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="MostrarArchivos"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@android:drawable/ic_menu_share"
+            app:fab_size="normal"
+            app:fab_title="COMPARTIR ARCHIVOS" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/enviar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="probar"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@android:drawable/ic_menu_send"
+            app:fab_size="normal"
+            app:fab_title="SUBIR DATOS A LA BD" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/recorrido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@android:drawable/ic_menu_mapmode"
+            app:fab_size="normal"
+            app:fab_title="INICIAR RECORRIDO"
+            tools:layout_editor_absoluteY="294dp" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/centrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@android:drawable/ic_menu_mylocation"
+            app:fab_size="normal"
+            app:fab_title="CENTRAR MAPA"
+            tools:layout_editor_absoluteY="294dp" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
