--- a/app/src/main/res/layout/alert_info_familia.xml
+++ b/app/src/main/res/layout/alert_info_familia.xml
@@ -11,10 +11,10 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:background="#0E5891"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_vertical"
         android:text="@string/info_familiar"
         android:textColor="#FFFFFF"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,9 +82,13 @@
 
     <Button
         android:id="@+id/EDITARREGISTRO"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/button1"
+        android:text="@string/editar"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
