Agrego mensaje de información general en el logo de RelevAr

--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -71,6 +71,7 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_marginTop="2dp"
+            android:onClick="mostrarInfoGeneral"
             app:layout_constraintEnd_toStartOf="@+id/constraintLayout12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
