--- a/app/src/main/res/layout/alert_iniciar_terminar_recorrido.xml
+++ b/app/src/main/res/layout/alert_iniciar_terminar_recorrido.xml
@@ -8,11 +8,14 @@
 
     <TextView
         android:id="@+id/CONSULTA"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
