--- a/app/src/main/res/layout/alert_ocupacion.xml
+++ b/app/src/main/res/layout/alert_ocupacion.xml
@@ -123,7 +123,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="@string/plan_social"
+        android:hint="PLAN SOCIAL O JUBILACION"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
