--- a/app/src/main/res/layout/alert_explorador.xml
+++ b/app/src/main/res/layout/alert_explorador.xml
@@ -8,14 +8,14 @@
 
     <Button
         android:id="@+id/CANCELAR"
-        android:layout_width="250dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/fondo1"
         android:text="CANCELAR"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
@@ -46,10 +46,12 @@
 
     <Button
         android:id="@+id/enviarGNU"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/CANCELAR"
+        android:background="@drawable/button1"
+        android:text="GNU Health"
+        app:layout_constraintBottom_toBottomOf="@+id/CANCELAR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/CANCELAR"
+        app:layout_constraintTop_toTopOf="@+id/CANCELAR" />
 </androidx.constraintlayout.widget.ConstraintLayout>
