--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -127,7 +127,7 @@
             android:id="@+id/compartir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="MostrarArchivos"
+            android:onClick="Compartir"
             app:fab_colorNormal="@color/colorAccent"
             app:fab_icon="@android:drawable/ic_menu_share"
             app:fab_size="normal"
